--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.0.2",
     "dotenv": "^10.0.0",
